tests/miniJava/neg/004809_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) Main { return 0 ; } }
